                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) core: ap_rgetline_core now pulls from r->proto_input_filters.

  *) mod_proxy_html: process parsed comments immediately. 
     Fixes bug where parsed comments may be lost. [Nick Kew]

  *) mod_proxy_html: introduce doctype for HTML 5 [Nick Kew]

  *) mod_proxy_html: fix typo-bug processing "strict" vs "transitional"
     HTML/XHTML [Nick Kew]

  *) core: Fix valgrind warning about uninitialized memory in argument to
     semctl. PR 53690. [Mikhail T. <mi+apache aldan algebra com>]

  *) core: Add option to add valgrind suport. Use it to reduce false positive
     warnings in mod_ssl. [Stefan Fritsch]

  *) mod_lua: Add bindings for apr_dbd/mod_dbd database access
     [Daniel Gruno]

  *) mod_authn_file, mod_authn_dbd, mod_authn_dbm, mod_authn_socache:
     Cache the result of the most recent password hash verification for every
     keep-alive connection. This saves some expensive calculations.
     [Stefan Fritsch]

  *) http: Remove support for Request-Range header sent by Navigator 2-3 and
     MSIE 3. [Stefan Fritsch]

  *) core, http: Extend HttpProtocol with an option to enforce stricter HTTP
     conformance or to only log the found problems. [Stefan Fritsch]

  *) core: Correctly parse an IPv6 literal host specification in an absolute
     URL in the request line. [Stefan Fritsch]

  *) mod_ssl: add support for subjectAltName-based host name checking
     in proxy mode. PR 54030. [Kaspar Brand]

  *) mpm_event: Check that AsyncRequestWorkerFactor is not negative. PR 54254.
     [Jackie Zhang <jackie qq zhang gmail com>]

  *) mod_ssl: Add support for OpenSSL configuration commands [Stephen Henson]

  *) EventOpt MPM

  *) core: Add LogLevelOverride directive that allows to override the
     loglevel for clients from certain IPs. This also works for things
     like the SSL handshake where <If> LogLevel ... </If> is evaluated